# get_schedule

./: .gitignore  .readthedocs.yml  LICENSE.txt  README.md  ScheduleExtractor.spec  pyproject.toml  setup.py
docs/: Project Diary.md  reflections_with_gemini_on_mySchedule.cloud
src/: .gitignore  __init__.py  __main__.py  build_calandar.py  calendar_builder.py  delete_calendar_events.py  parse_ocr_csv.py  requirements.txt  schedule_extractor.py  schedule_extractor_config.py  schedule_extractor_utils.py  test_ocr_on_snapshots.py
tests/: __main__.py
